--- a/CorujaPresentation/Views/Home/Equipe.cshtml
+++ b/CorujaPresentation/Views/Home/Equipe.cshtml
@@ -232,11 +232,6 @@
                 </div>
             </div>
             <!-- //ANA CAROLINA CASTRO ============================= -->
-            
-        </div>
-        <!-- EQUIPE 3a LINHA ======================================= -->
-        <div id="team-3rd-row" class="row row-centered">
-            <div class="cleaner_h30"></div>
             <!-- FLÁVIA CUNHA ====================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
                 <img src="~/Content/CorujaImages/Flavia.png" alt="Flávia Cunha" class="team-photo" width="500" height="500">
@@ -267,6 +262,11 @@
                 </div>
             </div>
             <!-- //FLÁVIA CUNHA ==================================== -->
+        </div>
+        <!-- EQUIPE 3a LINHA ======================================= -->
+        <div id="team-3rd-row" class="row row-centered">
+            <div class="cleaner_h30"></div>
+         
             <!-- TOMAS ==================================== -->
             <div class="col-md-3 col-xs-6 text-center col-centered">
                 <img src="~/Content/CorujaImages/Tomas.png" alt="Tomás da Silva Rangel" class="team-photo" width="500" height="500">
@@ -327,6 +327,36 @@
                 </div>
             </div>
             <!-- //CHRISTIAN TAKAGI ================================ -->
+            <!-- RENATA ================================== -->
+            <div class="col-md-3 col-xs-6 text-center col-centered">
+                <img src="~/Content/CorujaImages/Renata.png" alt="Renata" class="team-photo" width="500" height="500">
+                <!-- Trigger the modal with a button -->
+                <button type="button" class="btn btn-info btn-team col-centered" data-toggle="modal" data-target="#myModalRN">
+                    <p>
+                        <span class="team-name">Renata Nascimento</span><br>
+                        <span class="team-position">Estágio</span>
+                    </p>
+                </button>
+                <!-- Modal -->
+                <div id="myModalRN" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">×</button>
+                                <h4 class="modal-title">Renata Nascimento</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Estagiária da área comercial e marketing. Estuda Economia na PUC.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- //RENATA ================================ -->
         </div>
     </div>
 </section>
