--- a/CorujaPresentation/Views/Home/FAQ.cshtml
+++ b/CorujaPresentation/Views/Home/FAQ.cshtml
@@ -4,7 +4,7 @@
 
 
 
-    <section class="section section-gray">
+    <section class="section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -23,8 +23,11 @@
                                 </h4>
                             </div>
                             <div class="panel-collapse collapse" id="collapseOne" style="height: 0px;">
+                               
                                 <div class="panel-body">
-                                    A Coruja Educação tem um programa completo de diferenciação da instrução, que monitora o progresso dos alunos e oferece atividades adequadas ao nível de habilidade de cada um.
+                                    <div class="imgAccordion"></div>
+                                        A Coruja Educação tem um programa completo de diferenciação da instrução, que monitora o progresso dos alunos e oferece atividades adequadas ao nível de habilidade de cada um.
+                             
                                </div>
                             </div>
                         </div>
@@ -38,6 +41,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseTwo" style="height: 0px;">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     Cada criança aprende de modo particular: através de estímulos diversos, utilizando diferentes pontos de apoio para progredir, cada um no seu próprio ritmo. Muitas vezes, em uma mesma sala de aula, os alunos encontram-se em diferentes estágios do processo de aprendizagem. O grande desafio do professor e da escola é acompanhar e dar conta das diferenças entre os alunos e garantir que todos possam aprender e evoluir.
 
                                     Nós, da Coruja Educação, acreditamos que um desafio bem colocado, no momento certo, funciona como um gatilho para a aprendizagem: provoca engajamento, eleva a auto-estima, incentiva a colaboração e a comunicação. O programa de diferenciação da instrução baseia-se na abordagem diversificada: oferecer estímulos diferentes para os diferentes perfis e níveis de alunos.
@@ -54,6 +58,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseThree">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     Temos uma avaliação adaptativa, que monitora as habilidades e dificuldades de cada aluno; um material completo de instrução, que contém atividades e desafios adaptados às necessidades de cada perfil; um programa de formação de Diferenciação da Instrução para professores e gestores; um programa de formação de habilidades socioemocionais para professores, gestores e funcionários; e consultoria em Diferenciação da Instrução para educadores e alunos. 
                                 </div>
                             </div>
@@ -68,6 +73,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseFour">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     A avaliação é realizada no computador e cobre os eixos fundamentais da Língua Portuguesa (escuta, escrita alfabética, leitura e compreensão, produção de texto) e da Matemática (números, operações, espaço e forma, grandezas e tratamento da informação). Dura aproximadamente 60 minutos e pode ser aplicada de duas a três vezes por ano.
 
                                     Durante a avaliação, de acordo com o desempenho de cada criança, o sistema seleciona as questões mais apropriadas, ou seja, aquela que oferecem um desafio proporcional às habilidades que ela possui. A partir dos resultados, o sistema gera relatórios que refletem o estágio preciso em que cada aluno se encontra em cada eixo da Língua Portuguesa e da Matemática.
@@ -84,6 +90,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseFive">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     O papel do professor é essencial durante todo o processo. Ele recebe treinamento e suporte da equipe da Coruja Educação para interpretar os resultados da avaliação e aplicar o material de diferenciação da instrução em sala de aula.
                                 </div>
                             </div>
@@ -98,6 +105,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseSix">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     Cada aluno é classificado, segundo um sistema de cores, nos quatro eixos da Língua Portuguesa e da Matemática. Em cada um dos eixos, o aluno pode estar “abaixo da expectativa”, “próximo à expectativa”, “na expectativa” ou “acima da expectativa”.
 
                                     Com os resultados em mãos, o professor (ou profissional) aplica a(s) atividade(s) mais adequada(s) para estimular cada aluno ou grupo de alunos na medida da sua necessidade. Por exemplo, a partir de um problema de matemática, alguns alunos podem trabalhar com enunciados, enquanto outros operam contas numéricas, e um terceiro grupo quantifica conjuntos. Todos aprendem, cada um na medida da sua habilidade.
@@ -114,6 +122,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseSeven">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     O material da Coruja Educação pode ser aplicado em sala de aula, em grupos ou individualmente. Pode também ser utilizado como lição de casa. Outra aplicação bastante útil é para as aulas de reforço ou recuperação, a fim de diminuir a defasagem desses alunos em relação ao grupo.
                                 </div>
                             </div>
@@ -128,6 +137,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseEight">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     Atualmente, a Coruja oferece o conteúdo relativo ao ciclo de alfabetização, do 1o. ao 3o. anos. Em breve disponibilizaremos também os conteúdos de 4o. e 5o. anos, completando assim o Ensino Fundamental I.
                                 </div>
                             </div>
@@ -142,6 +152,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseNine">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     O PDI se aplica a todos os alunos do ciclo de alfabetização. Oferece desafios adequados às necessidades de cada perfil e pode beneficiar tanto os alunos mais defasados quanto os mais adiantados.
                                 </div>
                             </div>
@@ -156,6 +167,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseTen">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     A escola pode utilizar o PDI de várias maneiras, pois essa abordagem funciona para situações comuns que caracterizam o processo de aprendizagem. Pode-se utilizar o PDI em sala de aula, dividindo os alunos em grupos e aplicando um estímulo para cada um deles. Pode-se, também, utilizar a abordagem individual (em sala de aula ou como lição de casa). É possível, ainda, trabalhar no contra-turno, com os alunos mais defasados em determinado eixo ou competência. Ou, através dos resultados das avaliações, eleger competências prioritárias a serem desenvolvidas por toda a classe e/ou toda a escola.
                                 </div>
                             </div>
@@ -170,6 +182,7 @@
                             </div>
                             <div class="panel-collapse collapse" id="collapseEleven">
                                 <div class="panel-body">
+                                    <div class="imgAccordion"></div>
                                     Sim. O programa da Coruja Educação aplica-se a escolas públicas e particulares.
                                 </div>
                             </div>
