--- a/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
@@ -29,9 +29,9 @@
                         <div class="col-xs-6">
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control input-sm" })
                                 </div>
                             </div>
 
