--- a/CorujaPresentation/Views/Conta/Login.cshtml
+++ b/CorujaPresentation/Views/Conta/Login.cshtml
@@ -26,8 +26,10 @@
 
                     <div id="loginBody">
 
-                            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                            @using (Html.BeginForm("Login", "Conta", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                             {
+                                @Html.AntiForgeryToken()
+
                                 <fieldset>
 
                                     <div class="form-group input-group" style="margin-bottom:0">
@@ -35,8 +37,8 @@
                                             <i class="glyphicon glyphicon-envelope">
                                             </i>
                                         </span>
-                                        @Html.PasswordFor(m => m.Email, new { @class = "form-control" , @placeholder = "Email" })
-                                       
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" , @placeholder = "Email" })
+                                      
                                     </div>
                                     
                                     <div class="form-group">
