--- a/CorujaPresentation/Views/Conta/ResetSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ResetSenha.cshtml
@@ -31,21 +31,21 @@
 
                             <div class="col-xs-6">
                                 <div class="form-group">
-                                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control input-sm" })
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control input-sm" })
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+                                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control input-sm" })
                                     </div>
                                 </div>
                                 <div class="form-group">
