--- a/CorujaPresentation/Content/site.css
+++ b/CorujaPresentation/Content/site.css
@@ -1365,6 +1365,8 @@ button.btn-search {
 
 /*#region     4.8 ======== SECTION CADASTRO */
 
+
+
 .cadArea{
     -webkit-border-radius: 4px;
      border-radius: 4px;
@@ -1391,10 +1393,16 @@ button.btn-search {
      border-bottom: 1px solid #c5c5c5;
 }
     
+#preenchimento{
+    font-size:10px;
+    color:lightgray;
+}
+
+
+
  .cadSectionTitle{
     color:#ED4F37;
     font-size:1.5em;
-    margin-bottom:12px;
     }
  
 .cadSection{
@@ -1446,6 +1454,13 @@ button.btn-search {
     font-size: 12px;
     line-height: 1.5;
     border-radius: 3px;
+}
+
+ .asteriskCadastro{
+    font-size:10px;
+    font-weight:bold;
+    font-style:normal;
+    color:#EC725D; 
 }
 
 /*#endregion */
