--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -35,8 +35,12 @@
 
                             <div class="row cadSectionTitle">
                                 <div class="col-sm-12">
-                                    Dados Pessoais
+                                    DadosPessoais
                                 </div>
+                           
+                          
+                                 
+                                
                             </div>
 
                             <div class="row cadSection">
@@ -46,7 +50,7 @@
                                     <div class="form-group">
                                         @*Nome*@
                                         <div class="col-sm-6">
-                                            <i class="fa fa-asterisk icon-append"></i>
+                                            <i class="asteriskCadastro" >*</i>
                                             @Html.LabelFor(m => m.FirstName, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Nome" } })
 
@@ -54,6 +58,7 @@
                                         </div>
                                         @*Sobrenome*@
                                         <div class="col-sm-6">
+                                            <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.LastName, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Sobrenome" } })
 
@@ -72,6 +77,7 @@
 
                                         @*Cpf*@
                                         <div class="col-sm-4">
+                                            <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Cpf, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control input-sm", placeholder = "CPF" } })
 
@@ -204,7 +210,7 @@
 
                                         @*EMAIL*@
                                         <div class="col-sm-6">
-
+                                            <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Email, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Email" } })
                                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
@@ -229,6 +235,7 @@
                                     <div class="form-group">
 
                                         <div class="col-sm-6" style="margin-top:12px">
+                                            <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Password, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Senha" } })
                                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
@@ -239,6 +246,7 @@
                                     <div class="form-group">
 
                                         <div class="col-sm-6">
+                                            <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "" } })
                                             @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Confirmar Senha" } })
                                             @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
@@ -248,6 +256,15 @@
                                             <button id="btnCad" type="submit" class="btn btn-primary">Criar conta</button>
                                         </div>
 
+                                    </div>
+
+                                    <div class="form-group">
+                                    <div class="col-sm-12 pull-left">
+                                        <small>
+                                            <i class="asteriskCadastro">*</i> <span id="preenchimento">Preenchimento Obrigatório</span>
+                                        </small>
+
+                                    </div>
                                     </div>
 
                                 </div>
