--- a/CorujaPresentation/Views/Conta/ResetSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ResetSenha.cshtml
@@ -26,7 +26,7 @@
                         {
                             @Html.AntiForgeryToken()
                             <h5>Preencha os campos abaixo</h5>
-                            @Html.ValidationSummary("", new { @class = "text-danger" })
+                           
                             @Html.HiddenFor(model => model.Code)
 
                             <div class="col-xs-6">
@@ -34,18 +34,22 @@
                                     @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
                                     <div class="col-md-10">
                                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control input-sm" })
+                                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                     </div>
+
                                 </div>
                                 <div class="form-group">
                                     @Html.LabelFor(m => m.Password, new { @class = "col-md-2" })
                                     <div class="col-md-10">
                                         @Html.PasswordFor(m => m.Password, new { @class = "form-control input-sm" })
+                                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="form-group">
                                     @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2" })
                                     <div class="col-md-10">
                                         @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control input-sm" })
+                                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="form-group">
