--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <ul class="nav navbar-nav">
 
                         <li class="active">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "header" })</li>
-                        <li class="active">
+                        <li>
                             <a class="dropdown-toggle header" data-toggle="dropdown" href="#">Produtos<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Avaliações", "Produtos", "Home", null, new { @class = "header" })</li>
@@ -65,13 +65,13 @@
                             </ul>
                         </li>
 
-                        <li class="active">@Html.ActionLink("Equipe", "Equipe", "Home", null, new { @class = "header" })</li>
-                        <li class="active">@Html.ActionLink("Blog", "Blog", "Home", null, new { @class = "header" })</li>
-                        <li class="active">@Html.ActionLink("Parceiros", "Parceiros", "Home", null, new { @class = "header" })</li>
-                        <li class="active">@Html.ActionLink("FAQ", "FAQ", "Home", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("Equipe", "Equipe", "Home", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("Blog", "Blog", "Home", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("Parceiros", "Parceiros", "Home", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("FAQ", "FAQ", "Home", null, new { @class = "header" })</li>
 
-                        <li class="active">@Html.ActionLink("Admin", "AdminCoruja", "Admin", null, new { @class = "header" })</li>
-                        <li class="active">@Html.ActionLink("Conteúdo", "Index", "Conteudo", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("Admin", "AdminCoruja", "Admin", null, new { @class = "header" })</li>
+                        <li>@Html.ActionLink("Conteúdo", "Index", "Conteudo", null, new { @class = "header" })</li>
 
                     </ul>
                     
