--- a/CorujaPresentation/Views/Conta/Cadastro.cshtml
+++ b/CorujaPresentation/Views/Conta/Cadastro.cshtml
@@ -52,7 +52,7 @@
                                         <div class="col-sm-6">
                                             <i class="asteriskCadastro" >*</i>
                                             @Html.LabelFor(m => m.FirstName, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Nome" } })
+                                            @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control input-sm"} })
 
                                             @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                                         </div>
@@ -60,7 +60,7 @@
                                         <div class="col-sm-6">
                                             <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.LastName, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Sobrenome" } })
+                                            @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control input-sm"} })
 
                                             @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
                                         </div>
@@ -71,7 +71,7 @@
                                         @*DtNasc*@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(m => m.BirthDate, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @type = "text", @class = "form-control input-sm" , placeholder= "Data de Nascimento"} })
+                                            @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @type = "text", @class = "form-control input-sm"} })
                                             @Html.ValidationMessageFor(m => m.BirthDate, "", new { @class = "text-danger" })
                                         </div>
 
@@ -79,7 +79,7 @@
                                         <div class="col-sm-4">
                                             <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Cpf, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control input-sm", placeholder = "CPF" } })
+                                            @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control input-sm"} })
 
                                             @Html.ValidationMessageFor(m => m.Cpf, "", new { @class = "text-danger" })
                                         </div>
@@ -87,7 +87,7 @@
                                         @*RG*@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(m => m.Rg, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "RG" } })
+                                            @Html.EditorFor(m => m.Rg, new { htmlAttributes = new { @class = "form-control input-sm"} })
                                        
                                         </div>
                                     </div>
@@ -96,13 +96,13 @@
                                         @*Celular*@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Celular" } })
+                                            @Html.EditorFor(m => m.CellPhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm"} })
                                         </div>
 
                                         @*Tel Res.*@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Telefone" } })
+                                            @Html.EditorFor(m => m.PhoneNumber, new { htmlAttributes = new { @class = "form-control input-sm"} })
 
                                         </div>
 
@@ -111,7 +111,7 @@
 
                                     <div class="form-group">
                                         @*Escolaridade*@
-                                        <div class="col-sm-5">
+                                        <div class="col-sm-6">
                                             @Html.LabelFor(m => m.Graduation, new { htmlAttributes = new { @class = "" } })
                                             @Html.DropDownListFor(x => x.Graduation, (SelectListItem[])ViewBag.Lst,new { htmlAttributes = new { @class = "form-control input-sm" }})
                                             
@@ -138,15 +138,15 @@
                                     <div class="form-group">
 
                                         @*CEP*@
-                                        <div class="col-sm-4">
+                                        <div class="col-sm-3">
                                             @Html.LabelFor(m => m.Cep, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control input-sm", placeholder = "CEP" } })
+                                            @Html.EditorFor(m => m.Cep, new { htmlAttributes = new { Id = "Cep", @class = "form-control input-sm"} })
                                         </div>
 
                                         @*ENDERECO*@
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-9">
                                             @Html.LabelFor(m => m.Address, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control input-sm", placeholder = "Endereço" } })
+                                            @Html.EditorFor(m => m.Address, new { htmlAttributes = new { Id = "Address", @class = "form-control input-sm"} })
                                          
                                         </div>
 
@@ -154,21 +154,21 @@
 
                                     <div class="form-group">
                                         @*Numero*@
-                                        <div class="col-sm-3">
+                                        <div class="col-sm-2">
                                             @Html.LabelFor(m => m.AddressNumber, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control input-sm", placeholder = "Número" } })
+                                            @Html.EditorFor(m => m.AddressNumber, new { htmlAttributes = new { Id = "AddressNumber", @class = "form-control input-sm"} })
                                         </div>
 
                                         @*Complemento*@
                                         <div class="col-sm-4">
                                             @Html.LabelFor(m => m.AddressDetail, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.AddressDetail, new { htmlAttributes = new { Id = "AddressDetail", @class = "form-control input-sm", placeholder = "Complemento" } })
+                                            @Html.EditorFor(m => m.AddressDetail, new { htmlAttributes = new { Id = "AddressDetail", @class = "form-control input-sm" } })
                                         </div>
 
                                         @*Bairro*@
-                                        <div class="col-sm-5">
+                                        <div class="col-sm-6">
                                             @Html.LabelFor(m => m.Nhood, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control input-sm", placeholder = "Bairro" } })
+                                            @Html.EditorFor(m => m.Nhood, new { htmlAttributes = new { Id = "Nhood", @class = "form-control input-sm" } })
                                         </div>
 
                                     </div>
@@ -178,13 +178,13 @@
                                         @*Cidade*@
                                         <div class="col-sm-5">
                                             @Html.LabelFor(m => m.City, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id = "City", @class = "form-control input-sm", placeholder = "Cidade" } })
+                                            @Html.EditorFor(m => m.City, new { htmlAttributes = new { Id = "City", @class = "form-control input-sm"} })
                                         </div>
 
                                         @*UF*@
                                         <div class="col-sm-2">
                                             @Html.LabelFor(m => m.State, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control input-sm", placeholder = "Estado" } })
+                                            @Html.EditorFor(m => m.State, new { htmlAttributes = new { Id = "State", @class = "form-control input-sm"} })
                                         </div>
 
                                     </div>
@@ -209,10 +209,10 @@
                                     <div class="form-group">
 
                                         @*EMAIL*@
-                                        <div class="col-sm-6">
+                                        <div class="col-sm-7">
                                             <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Email, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Email" } })
+                                            @Html.EditorFor(m => m.Email, new { htmlAttributes = new { @class = "form-control input-sm" } })
                                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
 
                                         </div>
@@ -237,7 +237,7 @@
                                         <div class="col-sm-6" style="margin-top:12px">
                                             <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.Password, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Senha" } })
+                                            @Html.EditorFor(m => m.Password, new { htmlAttributes = new { @class = "form-control input-sm"} })
                                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                         </div>
 
@@ -248,7 +248,7 @@
                                         <div class="col-sm-6">
                                             <i class="asteriskCadastro">*</i>
                                             @Html.LabelFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "" } })
-                                            @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control input-sm", placeholder = "Confirmar Senha" } })
+                                            @Html.EditorFor(m => m.ConfirmPassword, new { htmlAttributes = new { @class = "form-control input-sm"} })
                                             @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
                                         </div>
 
