--- a/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<section id="EsqueceuSenha" class="section section-gray">
+<section id="LembrarSenha" class="section section-gray">
 
 
     <div class="container">
@@ -28,15 +28,16 @@
                         <div class="col-xs-6">
 
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Email, new { @class = "col-md-2" })
-                                <div class="col-md-10">
-                                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control input-sm" })
-                                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                               
+                                <div class="col-md-7">
+                                 @Html.LabelFor(m => m.Email, new { @class = "" })
+                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control input-sm" })
+                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
+                                <div class="col-md-10">
                                     <input type="submit" class="btn btn-primary" value="Enviar Email" />
                                 </div>
                             </div>
