--- a/CorujaPresentation/Views/Shared/Error.cshtml
+++ b/CorujaPresentation/Views/Shared/Error.cshtml
@@ -1,10 +1,15 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Error";
+    ViewBag.Title = (!String.IsNullOrEmpty(ViewBag.StatusCode)) ? ViewBag.StatusCode : "500 Error";
 }
 
+<h1 class="error">@(!String.IsNullOrEmpty(ViewBag.StatusCode) ? ViewBag.StatusCode : "500 Error"):</h1>
 
+//@Model.ActionName
+//@Model.ControllerName
+//@Model.Exception.Message
+//@Model.Exception.StackTrace
 
 
 <section id="Error" class="section section-gray">
