--- a/CorujaPresentation/Views/Shared/_LayoutAdmin.cshtml
+++ b/CorujaPresentation/Views/Shared/_LayoutAdmin.cshtml
@@ -277,10 +277,9 @@ desired effect
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active">@Html.ActionLink(" Lista", "RoleList", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
-                            <li class="active">@Html.ActionLink(" Adiconar", "CreateRole", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
-                            <li class="active">@Html.ActionLink(" Usuário-Perfil", "DefineUserRoles", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
-
+                            <li class="active">@Html.ActionLink(" Perfis", "Roles", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+                            <li class="active">@Html.ActionLink(" Usuários", "ListOfUsers", "Admin", null, new { @class = "glyphicon glyphicon-menu-right" })</li>
+              
                        </ul>
                     </li>
                 </ul>
