--- a/CorujaPresentation/Content/site.css
+++ b/CorujaPresentation/Content/site.css
@@ -1302,11 +1302,11 @@ button.btn-search {
 /*#region     4.6 ======== SECTION FAQ */
 
 .panel-default > .panel-heading {
-  background-image: -webkit-linear-gradient(top, #FCEFED 0%, #FCEFED 100%);
-  background-image:      -o-linear-gradient(top, #FCEFED 0%, #FCEFED 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#FCEFED), to(#FCEFED));
-  background-image:         linear-gradient(to bottom,#FCEFED 0%, #FCEFED 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FCEFED', endColorstr='#FCEFED', GradientType=0);
+  background-image: -webkit-linear-gradient(top, #00C0EF 0%, #00C0EF 100%);
+  background-image:      -o-linear-gradient(top, #00C0EF 0%, #00C0EF 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#00C0EF), to(#00C0EF));
+  background-image:         linear-gradient(to bottom,#00C0EF 0%, #00C0EF 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00C0EF', endColorstr='#00C0EF', GradientType=0);
   background-repeat: repeat-x;
   background-color:blue;
   color:black;
@@ -1326,7 +1326,6 @@ button.btn-search {
 
 
 /*#endregion */
-
 
 /*#region     4.7 ======== SECTION LOGIN */
 
@@ -1378,7 +1377,7 @@ button.btn-search {
 
 #logOffConta{
      margin:0;
-    padding: 0 0.6em 0 0;
+    padding: 0 0.7em 0 0;
 }
 
 #logOffSair{
@@ -1408,6 +1407,13 @@ input:-webkit-autofill {
 
 #BirthDate{
     font-size:14px;
+}
+
+#btnCad{
+
+    margin-top:24px;
+    margin-left:95px;
+
 }
 
 .cadArea{
@@ -1450,15 +1456,9 @@ input:-webkit-autofill {
     margin-bottom:22px;
 }
 
-#btnCad{
-
-    margin-top:24px;
-    margin-left:95px;
-
-}
 
 /*DROP DOWN STYLE DIDNT WORK!!*/
-#Graduation {
+#Graduation, #State {
   height: 30px;
   padding: 5px 10px;
   font-size: 14px;
@@ -1477,14 +1477,14 @@ input:-webkit-autofill {
        -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
           transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
-#Graduation:focus {
+#Graduation:focus, #State:focus {
   border-color: #66afe9;
   outline: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 
-    #Graduation:focus {
+    #Graduation:focus, #State:focus {
             background-color:#feffef;
     }
    
@@ -1506,7 +1506,6 @@ input:-webkit-autofill {
  
 
 /*#endregion */
-
 
 /*#region     4.8 ======== SECTIONS CONTA */
 
