--- a/CorujaPresentation/Views/Admin/DeleteRole.cshtml
+++ b/CorujaPresentation/Views/Admin/DeleteRole.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 @{
     ViewBag.Title = "DeleteRole";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
@@ -11,6 +11,30 @@
         <h2 class="section-heading text-center">Excluir Perfil</h2>
 
         <div class="row">
+            <h4>Role</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    Perfil
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => Model.Name)
+                </dd>
+
+            </dl>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+
+                    <input type="submit" class="btn btn-info btn-primary pull-right" value="Excluir Perfil" /> 	|
+
+                    @Html.ActionLink("Retornar à Lista de Perfis", "RoleManage")
+                </div>
+            }
 
         </div>
 
